# Ray-Tracing-in-One-Weekend

./: .gitignore  01.ppm  03.ppm  05.ppm  06.ppm  07.ppm  08.ppm  09.ppm  10.ppm  11.ppm  12.ppm  14.ppm  16.ppm  17.ppm  18.ppm  Build.sh  CMakeLists.txt  Debug.sh  Readme.md  Release.sh  Test.sh  result.ppm
MonteCarlo/: CosineSquare.cpp  Hemisphere.cpp  Hemisphere.sh  HitMiss.cpp  ImportanceSampling.cpp  Integral.cpp  Random.cpp  Random.sh
licenses/: miniengine.txt  pbrt.txt  rayt.txt
screenshots/: 02.ppm  04.ppm  13.ppm  15.ppm  mirror.ppm
screenshots/ssr/: both.ppm  dielectric.ppm  smoke.ppm
shaders/: BlitTexture.glsl
src/: BasicMesh.cpp  BasicMesh.h  Box.h  BvhNode.cpp  BvhNode.h  Camera.cpp  Camera.h  CheckerTexture.cpp  CheckerTexture.h  ConstantMedium.cpp  ConstantMedium.h  ConstantTexture.cpp  ConstantTexture.h  DiffuseLight.cpp  DiffuseLight.h  FlipNormal.h  GameCore.cpp  GameCore.h  Hitable.cpp  Hitable.h  HitableSet.cpp  HitableSet.h  ImageTexture.cpp  ImageTexture.h  Isotropic.cpp  Isotropic.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MovingSphere.cpp  MovingSphere.h  NoiseTexture.cpp  NoiseTexture.h  Pdf.h  Rect.cpp  Rect.h  Rotate.h  Sphere.cpp  Sphere.h  (+4 more)
src/Math/: AABB.cpp  AABB.h  Bounds.h  Common.h  Frame.cpp  Frame.h  Intersection.cpp  Intersection.h  Perlin.cpp  Perlin.h  RNG.cpp  RNG.h  Random.cpp  Random.h  Ray.cpp  Ray.h  Sampling.cpp  Sampling.h  Scattering.cpp  Scattering.h
src/core/: api.cpp  api.h  core.h  error.cpp  error.h  fileutil.cpp  fileutil.h  film.h  light.h  paramset.cpp  paramset.h  parser.cpp  parser.h  spectrum.h
src/tools/: Allocator.h  Memory.cpp  Memory.h  MemoryArena.cpp  MemoryArena.h  Parallel.cpp  Parallel.h  TCamera.cpp  string.cpp  string.h  stringprint.h
test/: aabb.cpp  bounds.cpp  common.cpp  memoryarena.cpp  parallel.cpp  parser.cpp  print.cpp  random.cpp  string.cpp
